Using google's ImmutableSet & ImmutableList